--- a/public/css/modules/menu/custom.css
+++ b/public/css/modules/menu/custom.css
@@ -1,5 +1,15 @@
-.dd-item:not(.dd-collapsed) > button.dd-expand,.suggestions, .menu-item-data {
+.dd-item:not(.dd-collapsed) > button.dd-expand,.suggestions, .menu-item-data, .dd-empty {
     display: none;
+}
+.dd3-empty {
+    text-align:center;
+    border: 1px dashed #bbb;
+}
+
+.dd3-empty i {
+    vertical-align: middle;
+    line-height: 100px;
+    font-size: 25px;
 }
 
 .dd3-content {
